# caboodle

./: .gitignore  .gitmodules  pyproject.toml  ruff.toml
caboodle/: utils.py
caboodle/models/: mae.py
caboodle/plot/: utils.py
sandbox/: dmri_data.py  eda.py  hypothesis.py  tt.py  vitmae.py
